# mdeng

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  doxygen.txt  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/Allocator/: Allocator.hpp  AllocatorTypes.hpp  Buffer.hpp  ConditionalAllocate.hpp  ImageBuffer.hpp  Memory.hpp  MemoryType.hpp  UnexpectedAllocationResult.hpp
src/Camera/: Camera.h  ComputedCamera.cpp  ComputedCamera.h  VPCamera.cpp
src/FreeBlockBuffer/: FreeBlockBuffer.hpp
src/GeometryParser/: CMakeLists.txt
src/GeometryParser/WaveFront/: Linerizer.cpp  Linerizer.h  NormalProcessing.cpp  NormalProcessing.h  ObjData.cpp  ObjData.h  ObjParserRange.cpp  ObjParserRange.h  ObjSchema.cpp  ObjSchema.h  Triangulator.cpp  Triangulator.h
src/LuaWay/: CMakeLists.txt  Common.h  FunctionResult.h  NativeType.cpp  NativeType.h  Ref.cpp  Ref.h  RefIterator.cpp  RefIterator.h  Register.hpp  Stack.h  Status.cpp  Status.h  VM.cpp  VM.h  VMBase.cpp  VMBase.h  VMView.cpp  VMView.h  VmType.cpp  VmType.h
src/Renderer/: CMakeLists.txt
src/Renderer/Allocator/: AllocateFromMany.hpp  Allocator.cpp  Allocator.h  AllocatorLoader.cpp  AllocatorLoader.h  AllocatorResult.h  Bounded.cpp  Bounded.h  BoundedResourceSize.hpp  BoundedSize.cpp  BoundedSize.h  Memory.cpp  Memory.h  MemoryPool.cpp  MemoryPool.h  MemoryPoolLists.cpp  MemoryPoolLists.h  MemoryType.cpp  MemoryType.h
src/Renderer/Allocator/codegen/: AllocatorLoader_gen.h
src/Renderer/Context/: Context.cpp  Context.h  ContextDestructors.cpp  ContextDestructors.h  Device.cpp  Device.h  DeviceLoader.cpp  DeviceLoader.h  DeviceUtilizer.h  DeviceWorker.h  GlobalLoader.cpp  GlobalLoader.h  Instance.cpp  Instance.h  InstanceLoader.cpp  InstanceLoader.h  InstanceSurfaceStorage.cpp  InstanceSurfaceStorage.h  PhysicalDevice.cpp  PhysicalDevice.h  Surface.cpp  Surface.h  VulkanLibrary.cpp  VulkanLibrary.h
src/Renderer/Context/codegen/: DeviceLoader_gen.h  GlobalLoader_gen.h  (+1 more)
src/Renderer/DataBuffer/: DataBuffer.cpp  DataBuffer.h  DataQueue.cpp  DataQueue.h
src/Renderer/DataIndexStorage/: DataIndexStorage.cpp  DataIndexStorage.h  IndexPool.cpp  IndexPool.h
src/Renderer/DescriptorStorage/: DescriptorPool.cpp  DescriptorPool.h  DescriptorStorage.cpp  DescriptorStorage.h
src/Renderer/GraphicsWorker/: FlaggedSwapchain.cpp  GraphicsWorker.cpp  GraphicsWorker.h  PerFrameResources.cpp  PerFrameResources.h  RenderInputs.hpp  RenderpassesOutputImage.cpp  RenderpassesOutputImage.h
src/Renderer/ImageStorage/: Image.cpp  Image.h  ImageStorage.h  ImageView.h
src/Renderer/RenderingWorker/: FlaggedSwapchain.h  GraphicsWorker.h  PerFrameResources.cpp  PerFrameResources.h  RenderInputs.hpp  RenderingWorker.h
src/Renderer/Shader/: Shader.h  ShaderInfoNode.hpp
src/Renderer/Swapchain/: Swapchain.cpp  Swapchain.h
src/Renderer/TransferChannel/: BoundedBufferSizeFillness.cpp  BoundedBufferSizeFillness.h  Data.cpp  Data.h  TransferBufferOp.h  TransferBufferOp.hpp  TransferChannel.cpp  TransferChannel.h  TransferImageOp.h  TransferImageOp.hpp
src/Renderer/Vulkan/: Generator.lua  InitResult.cpp  InitResult.h  LoaderInitResult.cpp  LoaderInitResult.h  QueueFamilyIndex.h  VkResultMeta.hpp  VulkanFormatUtils.hpp  VulkanLibrary.cpp  VulkanLibrary.h  VulkanLoaderGenBegin.h  VulkanLoaderGenEnd.h  VulkanUtils.hpp
src/Renderer/World/: World.cpp  World.h
src/Scene/: Scene.h
src/Scene/UniformInstanceIndexBufferHub/: IndexPool.hpp  UniformInstanceIndexAllocator.hpp  UniformInstanceIndexBufferHub.hpp  UpdateRequest.hpp
src/TestScene/: TestScene.h
src/Transfer/: BufferRegion.hpp  EmbeddedOperation.hpp  ImageRegion.hpp  Region.hpp  Transfer.hpp
src/UniformInstanceIndexBufferHub/: IndexPool.hpp  RemoveRequest.hpp  UniformInstanceIndexAllocator.hpp  UniformInstanceIndexBufferHub.hpp
src/Vulkan/: UnexpectedVkResult.hpp  VulkanFormatUtils.hpp  VulkanInclude.hpp  VulkanUtils.hpp
src/VulkanUtils/: BufferWithProperty.hpp
src/WindowSubSystem/: CMakeLists.txt  EventHandlers.cpp  EventHandlers.h  HandlerContainer.hpp  Window.cpp  Window.h  WindowSubSystem.cpp  WindowSubSystem.h  WindowSubSystemConfig.h
src/_Allocator/: Allocator.hpp  Buffer.hpp  Memory.hpp
src/_Camera/: Camera.h  VPCamera.cpp  VPCamera.h
src/_ImagesTaker/: ImageBlock.hpp  ImagesFreeBlockBuffer.hpp  ImagesMemoryTaker.hpp  ImagesMemoryTypeNode.hpp
src/_Scene/UniformInstanceIndexBufferHub/: AcquireRequest.hpp
src/_TestScene/: TestScene.cpp
src/_Transfer/: Data.hpp  EmbeddedOperation.hpp
src/__Allocator/: Allocator.hpp  AllocatorTypes.hpp  MemoryPool.hpp  MemoryType.hpp  UnexpectedAllocationResult.hpp
src/hrs/: CMakeLists.txt  _callback.hpp  _error.hpp  _free_block_allocator.hpp  _function_traits.hpp  _relaxed_free_blocks_chain.hpp  _unexpected_result.hpp  _variadic.hpp  block.hpp  copy_traits.hpp  debug.hpp  demangle.hpp  distinct.hpp  dynamic_library.hpp  early_return.hpp  enum_meta.hpp  error.hpp  expected.hpp  flags.hpp  free_block_allocator.hpp  free_block_chain_base.hpp  function_traits.hpp  hint_cast_object.hpp  inject.hpp  instantiation.hpp  iterator_for_each.hpp  linear_allocator.hpp  mem_req.hpp  member_class.hpp  non_creatable.hpp  on_thread_exit.hpp  one_of.hpp  ref.hpp  resource.hpp  scoped_call.hpp  sized_free_block_chain.hpp  stacktrace.hpp  swap_back_pop.hpp  tuple_utils.hpp  unexpected_result.hpp  (+2 more)
src/hrs/_math/: vector_view.hpp
src/hrs/math/: math_common.hpp  matrix.hpp  matrix_common.hpp  matrix_view.hpp  quaternion.hpp  vector.hpp  vector_common.hpp  vector_view.hpp
src/hrs/meta/: class_meta.hpp  class_meta_def.hpp  class_meta_undef.hpp  enum_meta.hpp  enum_meta_def.hpp  enum_meta_undef.hpp  meta_attributes.hpp  reflexpr.hpp  split_namespace.hpp
src/hrs/multikey_map/: basic_multikey_map.hpp  basic_multikey_map_fwd.hpp  entry.hpp  iterator.hpp  multikey_map.hpp  node.hpp
src/hrs/static_string/: algorithm.hpp  compare.hpp  static_string.hpp
src/hrs/test/: environment.cpp  environment.h  test_config.cpp  test_config.h  test_data.cpp  test_data.h  test_environment.cpp  test_environment.h  test_property.h  tests.h  tests_undef.h
(+128 files in other folders)
